--- a/app/src/main/res/layout/activity_beach_details.xml
+++ b/app/src/main/res/layout/activity_beach_details.xml
@@ -31,31 +31,31 @@
                 app:layout_collapseMode="parallax" />
 
 
-            <!-- Status Badge on Image -->
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/safety_status_bg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|start"
-                android:layout_margin="16dp"
+<!--            &lt;!&ndash; Status Badge on Image &ndash;&gt;-->
+<!--            <com.google.android.material.card.MaterialCardView-->
+<!--                android:id="@+id/safety_status_bg"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="bottom|start"-->
+<!--                android:layout_margin="16dp"-->
 
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp"
-                app:layout_collapseMode="parallax">
+<!--                app:cardCornerRadius="16dp"-->
+<!--                app:cardElevation="4dp"-->
+<!--                app:layout_collapseMode="parallax">-->
 
-                <TextView
-                    android:id="@+id/tv_safety_status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/montserrat_bold"
-                    android:paddingStart="16dp"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="16dp"
-                    android:paddingBottom="8dp"
-                    android:text="Caution"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp" />
-            </com.google.android.material.card.MaterialCardView>
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_safety_status"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:fontFamily="@font/montserrat_bold"-->
+<!--                    android:paddingStart="16dp"-->
+<!--                    android:paddingTop="8dp"-->
+<!--                    android:paddingEnd="16dp"-->
+<!--                    android:paddingBottom="8dp"-->
+<!--                    android:text="Caution"-->
+<!--                    android:textColor="#FFFFFF"-->
+<!--                    android:textSize="14sp" />-->
+<!--            </com.google.android.material.card.MaterialCardView>-->
 
             <!-- Toolbar -->
             <androidx.appcompat.widget.Toolbar
@@ -148,6 +148,16 @@
 <!--                                    android:textColor="@color/white"-->
 <!--                                    android:textSize="12sp" />-->
 <!--                            </com.google.android.material.card.MaterialCardView>-->
+
+                            <TextView
+                                android:id="@+id/beach_safety_status"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="SAFE"
+                                android:fontFamily="@font/montserrat_bold"
+                                android:textStyle="bold"
+                                android:textSize="15sp"
+                                android:layout_gravity="center"/>
 
                             <TextView
                                 android:id="@+id/tv_beach_title"
