--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -584,19 +584,19 @@
         </LinearLayout>
     </FrameLayout>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/profile_screen_bottom_nav"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@color/white"
-        app:itemIconTint="@drawable/bottom_nav_colors"
-        app:itemTextAppearanceActive="@style/TextAppearance.BottomNavigation.Active"
-        app:itemTextAppearanceInactive="@style/TextAppearance.BottomNavigation.Inactive"
-        app:itemTextColor="@drawable/bottom_nav_colors"
-        app:labelVisibilityMode="labeled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_navigation_menu" />
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--        android:id="@+id/profile_screen_bottom_nav"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="bottom"-->
+<!--        android:background="@color/white"-->
+<!--        app:itemIconTint="@drawable/bottom_nav_colors"-->
+<!--        app:itemTextAppearanceActive="@style/TextAppearance.BottomNavigation.Active"-->
+<!--        app:itemTextAppearanceInactive="@style/TextAppearance.BottomNavigation.Inactive"-->
+<!--        app:itemTextColor="@drawable/bottom_nav_colors"-->
+<!--        app:labelVisibilityMode="labeled"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:menu="@menu/bottom_navigation_menu" />-->
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
