--- a/app/src/main/res/layout/fragment_list_view.xml
+++ b/app/src/main/res/layout/fragment_list_view.xml
@@ -33,19 +33,56 @@
             android:id="@+id/emptyState"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No beaches found nearby"
+            android:text="No beaches found nearby \n Try setting a Location Filter."
             android:textSize="18sp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/montserrat_bold"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="gone" />
+             />
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/beach_recycler_view"
             android:layout_width="match_parent"
-            android:clipToPadding="false"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
+            android:clipToPadding="false"
+            android:paddingBottom="50dp"
             app:layout_constraintTop_toBottomOf="@+id/nearby_text"
             tools:listitem="@layout/new_card_beach"/>
+
+    <FrameLayout
+        android:id="@+id/loadingOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#88000000"
+        android:elevation="10dp"
+        android:clickable="true"
+        android:focusable="true">
+
+        <LinearLayout
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:indeterminateTintMode="src_atop"
+                android:indeterminateTint="@color/white"/>
+
+            <TextView
+                android:id="@+id/loadingText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Loading beach details..."
+                android:fontFamily="@font/montserrat_bold"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:paddingTop="12dp" />
+        </LinearLayout>
+    </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
